--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +23,7 @@
     "katex": "^0.11.1"
   },
   "devDependencies": {
+    "parcel-bundler": "^1.12.4",
     "typescript": "^3.7.4"
   }
 }
